[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Water.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/RedSoloCup.tscn" type="PackedScene" id=4]
[ext_resource path="res://assetsFB/Sounds/cartoon-gulp-swallow-sound.wav" type="AudioStream" id=5]
[ext_resource path="res://assetsFB/Sounds/drink-sip-and-swallow-6974.wav" type="AudioStream" id=6]
[ext_resource path="res://assetsFB/audio/point.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 87 )

[node name="Obstacle" type="Node2D" groups=["obstacles"]]
position = Vector2( 0, 427 )
script = ExtResource( 2 )

[node name="Wall" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 77 )

[node name="Wall2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -87 )
rotation = 3.14159

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 2, -5 )
shape = SubResource( 1 )

[node name="Water" parent="." instance=ExtResource( 3 )]
visible = false
monitoring = false

[node name="RedSoloCup" parent="." instance=ExtResource( 4 )]
visible = false
monitoring = false

[node name="redGulp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0

[node name="waterGulp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0

[node name="point" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="Wall" to="." method="_on_Wall_body_entered"]
[connection signal="body_entered" from="Wall2" to="." method="_on_Wall_body_entered"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_ScoreArea_body_exited"]
[connection signal="body_entered" from="Water" to="." method="_on_Water_body_entered"]
[connection signal="body_entered" from="RedSoloCup" to="." method="_on_RedSoloCup_body_entered"]
